--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -26,6 +26,10 @@ spec:
               value: "3000"
             - name: NODE_ENV
               value: "production"
+            - name: TRUST_PROXY
+              value: "true"
+            - name: COOKIE_SECURE
+              value: "false"
 ---
 apiVersion: v1
 kind: Service
